--- a/ebin/rabbit_ha_app.in
+++ b/ebin/rabbit_ha_app.in
@@ -4,11 +4,6 @@
   {modules, [
     rabbit_exchange_type_ha
   ]},
-  {registered, [rabbit_ha,
-                rabbit_ha_misc,
-                rabbit_ha_queue,
-                rabbit_ha_sup,
-                rabbit_exchange_type_ha]},
+  {registered, [gm]},
   {env, []},
-  {mod, {rabbit_ha, []}},
   {applications, [kernel, stdlib, rabbit]}]}.
