Stubbed out BQ/GM implementation

--- a/ebin/rabbit_ha_app.in
+++ b/ebin/rabbit_ha_app.in
@@ -1,9 +1,9 @@
 {application, rabbit_ha,
  [{description, "Highly available queues for RabbitMQ"},
   {vsn, "%%VSN%%"},
-  {modules, [
-             gm
+  {modules, [ gm,
+              rabbit_mirror_queue_master
             ]},
-  {registered, [gm]},
+  {registered, []},
   {env, []},
   {applications, [kernel, stdlib, rabbit]}]}.
