--- a/ebin/rabbit_ha_app.in
+++ b/ebin/rabbit_ha_app.in
@@ -3,7 +3,9 @@
   {vsn, "%%VSN%%"},
   {modules, [ gm,
               rabbit_mirror_queue_master,
-              rabbit_mirror_queue_coordinator
+              rabbit_mirror_queue_coordinator,
+              rabbit_mirror_queue_slave_sup,
+              rabbit_mirror_queue_slave
             ]},
   {registered, []},
   {env, []},
